Soft Delete and Restore Scheduled Job (#320)
* soft deletion

* migration file for deleted column

* update migration file

* restore endpoint and cli command

* role based logic

* remove wildcard imports

* redundant request matchers failing tests

* single wildcard failing tests

* spotless apply

* restore job and sql

* mocked user service test
